Lab 3 assignment submitted

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -168,6 +168,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5e3d612",
+   "metadata": {},
+   "source": [
+    "1. Array Creation and Manipulation: <br>\n",
+    "○ Load the Age and Fare columns into two separate NumPy arrays, ages and fares. <br>\n",
+    "○ The ages array has missing values (NaN). Create a new array cleaned_ages where all NaN \n",
+    "values are replaced with the median age of the passengers. <br>\n",
+    "○ Create a new array fares_in_euros by converting the fares (which are in British Pounds) to \n",
+    "Euros. Assume an exchange rate of 1 Pound = 1.18 Euros. <br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "da654bbc",
@@ -202,6 +215,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72fc669b",
+   "metadata": {},
+   "source": [
+    "2. Statistical Analysis: <br>\n",
+    "○ Using NumPy, calculate and print the following statistics for the cleaned_ages array: \n",
+    "<br>■ Average age<br> \n",
+    "■ Standard deviation<br> \n",
+    "■ The age of the oldest passenger <br>\n",
+    "■ The age of the youngest passenger \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "id": "825a7327",
@@ -228,6 +254,18 @@
     "print(\"Standard Deviation of Age:\", std_dev_age)\n",
     "print(\"Oldest Passenger Age:\", oldest_age)\n",
     "print(\"Youngest Passenger Age:\", youngest_age)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3adb2b78",
+   "metadata": {},
+   "source": [
+    "3. Boolean Indexing and Filtering: <br>\n",
+    "○ Create a boolean array that is True for passengers who paid a Fare greater than 50 and False \n",
+    "otherwise. <br>\n",
+    "○ Use this boolean array to count how many passengers paid more than 50 for their ticket. <br>\n",
+    "○ Display the ages of these high-paying passengers.<br>"
    ]
   },
   {
@@ -266,6 +304,21 @@
     "\n",
     "high_payers_ages = cleaned_ages[high_fare_mask]\n",
     "print(\"Ages of high-paying passengers:\", high_payers_ages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b6fcffa",
+   "metadata": {},
+   "source": [
+    "Part 2: Pandas Exercises  <br>\n",
+    "Use the Pandas library to perform a more in-depth analysis of the Titanic \n",
+    "DataFrame. <br>\n",
+    "1. Data Loading and Initial Exploration:<br> \n",
+    "○ Load the titanic.csv file into a Pandas DataFrame called df.<br> \n",
+    "○ Display the last 5 rows of the DataFrame. <br>\n",
+    "○ Get a summary of the DataFrame's technical information (column names, data types, non-null \n",
+    "counts). "
    ]
   },
   {
@@ -327,6 +380,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ccef1387",
+   "metadata": {},
+   "source": [
+    "2. Data Cleaning and Preprocessing: <br>\n",
+    "○ The Cabin column has many missing values. Drop this column entirely from the DataFrame.<br> \n",
+    "○ Fill the missing values in the Age column using the mean age. <br>\n",
+    "○ The Embarked column has a few missing values. Fill them with the mode (the most common \n",
+    "port of embarkation). <br>\n",
+    "○ Confirm that your DataFrame now has no missing values in any of the remaining columns.<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "id": "a11b27c5",
@@ -385,6 +451,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31bf438a",
+   "metadata": {},
+   "source": [
+    "3. Feature Engineering:<br> \n",
+    "○ Create a new column called FamilySize which is the sum of the SibSp and Parch columns, plus \n",
+    "1 (to count the passenger themselves).<br> \n",
+    "○ Create a categorical column called AgeGroup. Bin the Age column into the following groups:<br> \n",
+    "■ Child: 0-12 <br>\n",
+    "■ Teen: 13-19 <br>\n",
+    "■ Adult: 20-59 <br>\n",
+    "■ Senior: 60+<br>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "id": "34ff2f95",
@@ -409,6 +490,17 @@
     "df['AgeGroup'] = pd.cut(df['Age'], bins=bins, labels=labels)\n",
     "\n",
     "print(\"\\nNew columns added (FamilySize, AgeGroup).\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7b07b88",
+   "metadata": {},
+   "source": [
+    "4. Data Selection and Querying: <br>\n",
+    "○ Display the Name, Sex, and AgeGroup of all passengers who survived. <br>\n",
+    "○ Find all female passengers who were in 1st Class (Pclass == 1). <br>\n",
+    "○ Select all passengers who embarked from Southampton ('S') and paid a fare less than 10.<br>"
    ]
   },
   {
@@ -491,6 +583,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7d463c3",
+   "metadata": {},
+   "source": [
+    "5. Grouping and Aggregation (Groupby): <br>\n",
+    "○ What was the average age of passengers who survived versus those who did not? (Hint: Group \n",
+    "by the Survived column). <br>\n",
+    "○ Group the DataFrame by Pclass and Sex. For each group, calculate the survival rate (the mean \n",
+    "of the Survived column). This will show you the survival probability for men and women in \n",
+    "each class."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "id": "c70eee2d",
@@ -529,6 +634,16 @@
     "survival_rate = df.groupby(['Pclass', 'Sex'])['Survived'].mean()\n",
     "print(\"\\nSurvival rate by Class and Sex:\")\n",
     "print(survival_rate)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13520aff",
+   "metadata": {},
+   "source": [
+    "6. Exporting the Final DataFrame: <br>\n",
+    "○ Save your final, cleaned DataFrame with the new FamilySize and AgeGroup columns to a new \n",
+    "CSV file named titanic_processed.csv. Do not include the pandas index in the file."
    ]
   },
   {
